# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-03-26 19:05:20 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-38

    Summary:
      xml, move the xhtml code to its own package, 'itools.xhtml'
    Revision:
      itools--main--0.8--patch-38


    new files:
     xhtml/.arch-ids/=id

    modified files:
     Changelog html/HTML.py html/__init__.py setup.py
     xhtml/XHTML.py xml/__init__.py

    renamed files:
     xml/.arch-ids/XHTML.py.id
       ==> xhtml/.arch-ids/XHTML.py.id
     xml/.arch-ids/test_xhtml.py.id
       ==> xhtml/.arch-ids/test_xhtml.py.id
     xml/XHTML.py
       ==> xhtml/XHTML.py
     xml/test_xhtml.py
       ==> xhtml/test_xhtml.py

    new directories:
     xhtml xhtml/.arch-ids


2005-03-26 18:41:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-37

    Summary:
      xhtml, specify always the content type in the meta tag
    Revision:
      itools--main--0.8--patch-37

    Now XHTML and HTML handlers always include the "meta" tag for the
    content type and encoding when serialized, even if the original
    resource lacked it.

    modified files:
     Changelog handlers/IO.py html/HTML.py xml/XHTML.py xml/XML.py


2005-03-25 20:04:00 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-36

    Summary:
      html, update to the last changes in xml
    Revision:
      itools--main--0.8--patch-36


    modified files:
     Changelog html/HTML.py xml/XML.py


2005-03-25 19:19:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-35

    Summary:
      xml, separate serialization and de-serialization from logic
    Revision:
      itools--main--0.8--patch-35


    modified files:
     Changelog handlers/IO.py xml/STL.py xml/XHTML.py xml/XML.py


2005-03-25 10:41:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-34

    Summary:
      added warning comment for Windows ('get_abspath')
    Revision:
      itools--main--0.8--patch-34

    Suggested by Oliver Marx.
