@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
 #
 
+2005-03-26 19:21:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-39
+
+    Summary:
+      resource, add lock/unlock API, implement it for Zope 2
+    Revision:
+      itools--main--0.8--patch-39
+
+
+    modified files:
+     Changelog resources/base.py resources/zope2.py
+
+
 2005-03-26 19:05:20 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-38
 
     Summary:
